<resources>
    <string name="app_name">Insurance Calculator</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoke?</string>
    <string name="Calculate">Calculate</string>
    <string name="Reset">Reset</string>
    <string name="insurance_premium">Insurans Premium : </string>
    <string-array name="age_group">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>41 to 55</item>
        <item>More than 55</item>
    </string-array>
</resources>
